overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -282,6 +282,7 @@ nav {
    flex-direction: column;
    justify-content: space-between;
    position: absolute;
+   overflow: hidden;
 }
 .pojects_item {
    position: absolute;
